# aferir

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
data/inputs/: amostra_dca_municipal.csv  bcb_sgs_fisim_pf_2021.csv  bcb_sgs_fisim_pf_2021.csv._meta.json  comparadores.csv  dupla_codificacao_2026_07.csv  dupla_codificacao_dirigida_2026_07.csv  fbcf_v1_uf.csv  icms_adrem_vigencias.csv  icms_etanol_hidratado_vigencias.csv  is_ipi_residual.csv  pis_cofins_combustiveis_vigencias.csv
data/outputs/: MANUSCRIPT.docx  t1_manchete.csv  t2_vetores_uf.csv  t3_cenarios.csv  t4_distribuicao.csv
data/processed/: MANIFEST_RUN.json  MANIFEST_TRAVA.json  _seed_manifest.json  (+66 more)
docs/: CHANGELOG.md  DESIGN.md  METODOLOGIA.md
metadata/: auditoria_nivel_2026_07_13.md  baseline_revisao.json  crosswalk_metodologia.csv  diff_baseline.md  diligencias_fontes.csv  legal_map.csv  qa_citacoes_referencias.csv  qa_regressoes_parecer_l7.csv  qa_rotulos_cenarios.csv
tests/: test_bibliografia.py  test_cashback_legal.py  test_classificacao.py  test_combustiveis_vigencias.py  test_distribuicao.py  test_etanol.py  test_federal.py  test_figures.py  test_g_perimetros.py  test_gov_aquisicoes.py  test_inputs_nucleo.py  test_is_ampliado.py  test_legal_map.py  test_manuscript.py  test_perfis_trava.py  test_pof.py  test_qa_confaz.py  test_rates.py  test_regressoes_l7.py  test_robustez.py  test_siconfi_municipal.py  test_sifim_fbcf.py  test_simples.py  test_trava.py  test_uncertainty.py
tools/: extrai_citacoes.py  extrai_dispositivos.py  extrai_fontes.py  gera_diff_baseline.py
(+267 files in other folders)
